Cap2025/src/edu/najah/cap/advance/examples/exc3/correct/Filter.java
package edu.najah.cap.advance.examples.exc3.correct;

public interface Filter {

    String applyFilter(String result) ;
}
