Cap2025/src/edu/najah/cap/advance/examples/exc3/bad/IMaskFilter.java
package edu.najah.cap.advance.examples.exc3.bad;

public interface IMaskFilter {

    String applyMaskFilter(String result) ;
}
